syntax = "proto3";

package admin_doctor_micro;

service serviceProvider {
    rpc ServiceReq(reqData) returns(resData) {}
}

message reqData {
    string serviceName = 1;
    string operationName = 2;
    string payload = 3;
}

message resStruct {
    int32 status = 1;
    string message = 2;
    string data = 3;
}

message resData {
    resStruct response = 1;
}
